--- a/Css/Estilo.css
+++ b/Css/Estilo.css
@@ -64,12 +64,9 @@ h2 {
 
 .nav{
 	background-color:rgb(25, 51, 199) ;
-	
-	border: 8px #575757 solid;
-	
-	
+	border: 2px #575757 solid;
 	  
-		}
+	}
 	.nav_ul {
 	  list-style-type: none;
 	  position: relative;
@@ -166,8 +163,12 @@ footer{
 }
 
 #mapDiv{
-    width: 100%;
-    height: 100vh;
+	margin: auto;
+	margin-top: 25px;
+    width: 750px;
+    height: 750px;
+	border: 6px solid whitesmoke;
+  	border-color: black;
 }
 #button{
     border: 2px solid rgb(204, 73, 59);
@@ -233,11 +234,12 @@ footer{
 }
 
 	#lienzo {
-		position: absolute;
+		position: fixed;
 		top: 0; 
 		left: 0;
 		z-index: -1;
 	  }
 	#contenedor {
 		position: relative;
+		
 	  }
